mylang/tests/fail/f0.pas
program

function less(var i, j: int): bool
begin
    less := i < j
end;

begin
    if (less(1,2) = 2) then begin
        writeln(123)
    end
end@

